# cpp-raytracer

./: .gitignore  CMakeLists.txt  README.md
cmake/: clang-format.cmake  cppcheck.cmake
src/: main.cpp
src/adder/: adder.cpp  adder.hpp
src/multiplier/: multiplier.cpp  multiplier.hpp
tests/: CMakeLists.txt  test_adder.cpp  test_foo.cpp  test_multiplier.cpp
